# agent-jumbo

./: .actrc  .dockerignore  .env.example  .gitignore  .markdownlintrc  .pre-commit-config.yaml  .secrets.baseline  AGENT-JUMBO-CLONE.md  AGENT-JUMBO-OPA.md  ANALYSIS_FINDINGS_AND_RECOMMENDATIONS.md  APPLY_MCP_CONFIG.md  BUSINESS_XRAY_IMPLEMENTATION.md  BUSINESS_XRAY_QUICK_REF.md  CHANGELOG.md  COMPARISON_DEVOPS_VS_MOLTBOT_OPENSOURCING.md  COMPETITIVE-ANALYSIS.md  COMPLETE_IMPLEMENTATION_INVENTORY.md  COMPLETE_VS_COMPLETE_COMPARISON.md  CONTINUE_DEVELOPMENT.md  CONTRIBUTING.md  DEEP_DIVE_COMPLETE_ANALYSIS_INDEX.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_TECHNICAL_GUIDE.md  DEVOPS_DEPLOYMENT_COMPLETION_SUMMARY.md  DEVOPS_DEPLOYMENT_INDEX.md  DEVOPS_DEPLOYMENT_QUICK_REFERENCE.md  DEVOPS_DEPLOYMENT_README.md  DEV_CONTAINER_FIX.md  DEV_CONTAINER_READY.md  DIAGRAM_ARCHITECTURE.md  DIAGRAM_IMPLEMENTATION_SUMMARY.md  DIAGRAM_QUICK_REFERENCE.md  DOCKER-QUICKREF.md  Dockerfile.prod  DockerfileLocal  EMAIL_DELIVERY_COMPLETE.md  FEATURE_TEAMS_DEPLOYMENT.md  FEATURE_TEAMS_READY.md  FIX_OLLAMA_CONFIG.md  FLASH_DRIVE_DEPLOYMENT_PLAN.md  (+56 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
app_spec/: README.md  overview.json  schema.json
conf/: model_providers.yaml
data/: llm_router.db  telegram_state.json
deploy/: Caddyfile  fetch-artifact.sh  resolve-env.sh  start-docker.sh  start.sh  verify.sh
docker/: build-base-local.sh  build-fast.sh  claude-container-settings.json
docs/: AGENT_JUMBO_PRODUCT_UPDATE_DRAFT.md  AGENT_MAHOO_PRODUCT_UPDATE_DRAFT.md  AGENT_ZERO_PRODUCT_UPDATE_DRAFT.md  AI_SOLUTIONING_OPERATOR_GUIDE.md  ANTHROPIC_PLATFORM_UPDATES.md  BILLING_SETUP_JOURNEY.md  BROWSER_ACCOUNT_SETUP.md  BUSINESS_WORKFLOW_TEMPLATES.md  COMMUNICATION_PACK_AGENT_JUMBO.md  COMMUNICATION_PACK_AGENT_MAHOO.md  COMPETITIVE_POSITIONING_V1.md  CUSTOMER_LIFECYCLE_VIRTUAL_TEAM.md  CUSTOMER_SUPPORT.md  DATA_DELETION_POLICY.md  DATA_RETENTION_POLICY.md  DEPLOYMENT.md  DEPLOYMENT_AND_OPERATIONS.md  DOCKER-DEPLOY.md  EMAIL_COMPLETE.md  EMAIL_INTEGRATION_PHASE1.md  EMAIL_QUICK_REFERENCE.md  EMAIL_QUICK_START.md  GA_EVIDENCE_PACKAGE.md  GA_EVIDENCE_RECORD_2026-03-24.md  GA_LAUNCH_INVENTORY.md  GA_LAUNCH_RUNBOOK.md  GMAIL_API_PHASE2_PHASE3.md  GMAIL_UI_INTEGRATION_SUMMARY.md  GMAIL_UI_QUICK_REFERENCE.md  GMAIL_UI_SETUP.md  GMAIL_UI_TESTING.md  GOOGLE_VOICE_TESTING_GUIDE.md  GO_BLUE_EXECUTION_PLAN_AGENT_JUMBO.md  GO_BLUE_EXECUTION_PLAN_AGENT_MAHOO.md  IMPLEMENTATION_SUMMARY.md  LEGAL_COMPLIANCE_BRIEF_AGENT_JUMBO.md  LEGAL_COMPLIANCE_BRIEF_AGENT_MAHOO.md  LIFE_AUTOMATION_DESIGN.md  LIFE_AUTOMATION_UX_PLAN.md  MAHOOSUC_TOOLS.md  (+56 more)
knowledge/: INTERNAL_KNOWLEDGE_MAP.md
ollama_models/: README.md
project_context/: agent_jumbo.context.yaml  agent_mahoo.context.yaml
prompts/: agent.extras.agent_info.md  agent.extras.project.file_structure.md  agent.system.behaviour.md  agent.system.datetime.md  agent.system.instruments.md  agent.system.main.communication.md  agent.system.main.communication_additions.md  agent.system.main.environment.md  agent.system.main.md  agent.system.main.role.md  agent.system.main.solving.md  agent.system.main.tips.md  agent.system.memories.md  agent.system.projects.active.md  agent.system.projects.main.md  agent.system.response_tool_tips.md  agent.system.secrets.md  agent.system.solutions.md  agent.system.telegram_orchestrator.md  agent.system.tool.a2a_chat.md  agent.system.tool.ai_migration.md  agent.system.tool.behaviour.md  agent.system.tool.browser.md  agent.system.tool.business_xray_tool.md  agent.system.tool.calendar_hub.md  agent.system.tool.call_sub.md  agent.system.tool.call_sub.py  agent.system.tool.claude_sdk_bridge.md  agent.system.tool.code_exe.md  agent.system.tool.code_review.md  agent.system.tool.coordinator.md  agent.system.tool.customer_lifecycle.md  agent.system.tool.demo_request_create.md  agent.system.tool.demo_request_list.md  agent.system.tool.deployment_execute.md  agent.system.tool.deployment_orchestrator.md  agent.system.tool.deployment_record_result.md  agent.system.tool.deployment_run_checks.md  agent.system.tool.deployment_validate_env.md  agent.system.tool.diagram_architect.md  (+67 more)
scripts/: bootstrap_workflows.py  build-platform-manifest.sh  build.sh  cleanup-docker-run.sh  cron_digest_pipeline.example  docker-deploy.sh  gcp_models_sync.sh  google_voice_integration_test.py  health_check.sh  init.py  init_ollama_model.sh  introspect_platform.py  migrate_identity_db.py  package-release.sh  paypal_catalog_sync.py  populate_business_templates.py  run-ci-local.sh  security_validation.py  setup_ai_solutioning_training.py  setup_feature_teams.sh  smoke_test_llm_router.py  square_catalog_sync.py  start_laptop_mode.sh  start_with_telegram.py  stripe_catalog_sync.py  sync_ollama_models.sh  telegram_webhook_setup.py  test_google_voice_checkin.py  validate.sh  validate_360.sh  validate_deployment.sh  validate_post_deploy_runtime.py  validate_project_context.py  validate_release.sh  verify_mahoosuc_import.sh
skills/: README.md  registry.json  registry.md
tests/: E2E_CHECKLIST_LLM_ROUTER.md  _test_template.py  rate_limiter_test.py  test_agent_profile_api.py  test_agent_router_integration.py  test_agentmesh.py  test_ai_migration_db.py  test_app_spec_consistency.py  test_billing_setup_api.py  test_billing_setup_manager.py  test_billing_workflow_recovery.py  test_business_xray.py  test_calendar_provider.py  test_chat_queue_policy.py  test_claude_sdk.py  test_code_review.py  test_codebase_scanner.py  test_complexity_classifier.py  test_connections_api.py  test_csuite_integration.py  test_customer_lifecycle.py  test_db_connection.py  test_demo_request_deployment_workflow.py  test_demo_request_helpers.py  test_demo_request_store.py  test_deployment_orchestrator_db.py  test_devops_monitor.py  test_diagram_architect_db.py  test_digest_builder_manager.py  test_dunning_manager.py  test_e_series_validation.py  test_email_integration.py  test_email_standalone.py  test_executive_memory_wiring.py  test_explainability_framework.py  (+106 more)
(+1505 files in other folders)
