# ============================================
# Project Metadata for PyPI Publication
# ============================================
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-jumbo-devops"
version = "1.0.0-beta"
description = "Intelligent multi-platform deployment orchestration for AI agents"
authors = [
    {name = "Mahoosuc Solutions", email = "aaron@mahoosuc.solutions"}
]
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = [
    "deployment",
    "orchestration",
    "devops",
    "kubernetes",
    "aws",
    "gcp",
    "ssh",
    "ci/cd",
    "ai-agents",
    "automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking",
]

dependencies = [
    "a2wsgi>=1.10.8",
    "aiohttp>=3.13.3",
    "aiosmtplib>=5.0.0",
    "ansio>=0.0.1",
    "anthropic>=0.76.0",
    "beautifulsoup4>=4.12.3",
    "browser-use>=0.5.11",
    "chardet<6",
    "claude-code-sdk>=0.0.25",
    "crontab>=1.0.1",
    "docker>=7.1.0",
    "duckduckgo-search>=6.1.12",
    "exchangelib>=5.4.3",
    "faiss-cpu>=1.11.0",
    "fasta2a>=0.5.0",
    "fastmcp>=3.1.1",
    "flaredantic>=0.1.4",
    "flask[async]>=3.1.3",
    "flask-basicauth>=0.2.0",
    "flask-limiter>=3.5.0",
    "GitPython>=3.1.43",
    "google-api-python-client>=2.110.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "google-cloud-pubsub>=2.18.0",
    "html2text>=2024.2.26",
    "imapclient>=3.0.1",
    "inputimeout>=1.0.4",
    "kokoro>=0.9.2",
    "kubernetes>=28.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.19",
    "langchain-unstructured>=0.1.6",
    "litellm>=1.79.3",
    "lxml-html-clean>=0.4.4",
    "markdown>=3.8.1",
    "markdownify>=1.1.0",
    "mcp>=1.13.1",
    "nest-asyncio>=1.6.0",
    "newspaper3k>=0.2.8",
    "openai>=1.99.2",
    "openai-whisper>=20240930",
    "paramiko>=3.5.0",
    "pathspec>=0.12.1",
    "pdf2image>=1.17.0",
    "playwright>=1.52.0",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "pymupdf>=1.25.3",
    "pypdf>=6.8.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.0",
    "pytz>=2024.2",
    "pywinpty>=3.0.2; sys_platform == 'win32'",
    "sentence-transformers>=3.0.1",
    "simpleeval>=1.0.5",
    "soundfile>=0.13.1",
    "tenacity>=8.2.0",
    "tiktoken>=0.8.0",
    "unstructured[all-docs]>=0.21.5",
    "unstructured-client>=0.31.0",
    "webauthn>=2.2.0",
    "webcolors>=24.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "pytest-xdist>=3.5.0",
    "jsonschema>=4.22.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
    "pyright>=1.1.350",
    "bandit>=1.7.8",
    "safety>=3.0.0",
    "ipdb>=0.13.0",
    "rich>=13.0.0",
    "black>=23.0",
    "mypy>=1.0",
    "pytest-json-report>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/agent-jumbo-deploy/agent-jumbo-devops"
"Bug Tracker" = "https://github.com/agent-jumbo-deploy/agent-jumbo-devops/issues"
Documentation = "https://github.com/agent-jumbo-deploy/agent-jumbo-devops/tree/main/docs"
"Source Code" = "https://github.com/agent-jumbo-deploy/agent-jumbo-devops"
Discussions = "https://github.com/agent-jumbo-deploy/agent-jumbo-devops/discussions"

# ============================================
# Setuptools Package Discovery
# ============================================
[tool.setuptools.packages.find]
where = ["."]
include = ["python*", "instruments*"]

# ============================================
# Ruff Configuration for Agent Jumbo
# ============================================
[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4

# Exclude common non-source directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
    "node_modules",
    "docker",
    "logs",
    "tmp",
    "memory",
    "knowledge",
    ".devcontainer",
]

[tool.ruff.lint]
# Enable recommended rules plus some extras
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "E701",   # Multiple statements on one line (existing code patterns)
    "E722",   # Bare except (intentional in some error handling)
    "E741",   # Ambiguous variable name (existing patterns using l, I, O)
    "B008",   # Do not perform function calls in argument defaults
    "B015",   # Pointless comparison (existing patterns)
    "B024",   # Abstract base class without abstract methods (intentional)
    "B904",   # raise from (too many existing violations)
    "B905",   # zip() without an explicit strict= parameter
    "B023",   # Function definition does not bind loop variable (existing patterns)
    "SIM102", # Nested if statements (existing patterns)
    "SIM105", # contextlib.suppress (existing patterns)
    "SIM108", # Use ternary operator instead of if-else block
    "SIM113", # Use enumerate (existing patterns)
    "SIM115", # Use context manager for files (existing patterns)
    "SIM103", # Return condition directly (existing patterns)
    "SIM116", # Use dict instead of if/elif (existing patterns)
    "SIM117", # Single with statement (existing patterns)
    "UP007",  # Use X | Y for type annotations (keep Optional for clarity)
    "RUF001", # String contains ambiguous unicode (intentional emoji)
    "RUF002", # Docstring contains ambiguous unicode (intentional)
    "RUF003", # Comment contains ambiguous unicode (intentional dashes)
    "RUF006", # Store asyncio.create_task reference (existing patterns)
    "RUF012", # Mutable class attributes should be annotated
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Tests: allow sys.path manipulation, unused vars, conditional imports
"tests/*" = ["E402", "F841", "SIM105", "PLR2004", "S101", "RUF059", "B017"]
"tests/**/*.py" = ["E402", "F841", "SIM105", "PLR2004", "S101", "RUF059", "B017"]
# Extensions may have conditional imports
"**/extensions/*" = ["E402"]
# Initialization requires sys.path setup
"initialize.py" = ["E402"]
# Core files with nest_asyncio.apply() before imports
"agent.py" = ["E402"]
"run_ui.py" = ["E402"]
"preload.py" = ["E402"]
"prepare.py" = ["E402"]
# Init files can have unused imports
"__init__.py" = ["F401"]
# Scripts may have print statements and sys.path manipulation
"scripts/**/*.py" = ["T201", "E402"]
# Instruments with complex patterns
"instruments/**/*.py" = ["E402", "B007"]
# Python helpers/tools with conditional imports
"python/**/*.py" = ["E402", "B007"]

[tool.ruff.lint.isort]
known-first-party = ["python", "instruments", "agent"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================
# Pytest Configuration
# ============================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
norecursedirs = ["docker", "node_modules", ".git"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "security: marks tests as security probes (hard block in CI)",
    "performance: marks tests as performance SLA checks (soft block in CI)",
    "a11y: marks tests as accessibility audits (advisory in CI)",
]

# ============================================
# Coverage Configuration
# ============================================
[tool.coverage.run]
source = ["python", "instruments"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/tmp/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# ============================================
# Pyright Configuration
# ============================================
[tool.pyright]
include = ["python", "instruments", "agent.py", "models.py"]
exclude = ["**/node_modules", "**/__pycache__", "docker", "tmp"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
